@@ -153,6 +153,7 @@ glibc (2.3.6-16) UNRELEASED; urgency=low
     determine if the host CPU is able to run the testsuite.
   * debian/sysdeps/kfreebsd.mk: also use the nfs/ directory from kernel
     headers.
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 1592 (from glibc-bsd).
 
   [ Denis Barbier ]
   * debian/control.in/main: also make locales Conflicts: belocs-locales-bin.
